--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/maveric-bank-app
 spring.data.mongodb.database=maveric-bank-app
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host = localhost
+spring.data.mongodb.username = maveric
+spring.data.mongodb.password = maveric123
+#spring.data.mongodb.port=27017
 
 server.port=3015
+
+#eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+#eureka.client.instance.preferIpAddress = true
+spring.application.name = balance-service
